Add headlines to main page and input images

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your app's title</title>
+  <title>Unabashed clone of another website</title>
 
   <script src="libs/jquery-1.11.2.js"></script>
   <script src="libs/ember-template-compiler-1.10.0.js"></script>
   <script src="libs/ember-1.10.0.debug.js"></script>
   <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
 
+  <script src="bustle.js"></script>
+  <script src="router.js"></script>
+
   <script>
-  EmberHandlebarsLoader.loadTemplates(['templateName1', 'templateName2']);
+    EmberHandlebarsLoader.loadTemplates(['headlines', 'application']);
   </script>
+
 </head>
 <body>
 
