Add routes and pages for the headlines on the main page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
   <title>Unabashed clone of another website</title>
 
   <script src="libs/jquery-1.11.2.js"></script>
@@ -12,7 +13,7 @@
   <script src="router.js"></script>
 
   <script>
-    EmberHandlebarsLoader.loadTemplates(['headlines', 'application']);
+    EmberHandlebarsLoader.loadTemplates(['headlines', 'application', 'manBun', 'hip', 'facialHair', 'granola']);
   </script>
 
 </head>
