--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="css/styles.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
   <title>Unabashed clone of another website</title>
 
@@ -8,9 +9,9 @@
   <script src="libs/ember-template-compiler-1.10.0.js"></script>
   <script src="libs/ember-1.10.0.debug.js"></script>
   <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
-
   <script src="bustle.js"></script>
   <script src="router.js"></script>
+  <script src="controllers/headlines.js"></script>
 
   <script>
     EmberHandlebarsLoader.loadTemplates(['headlines', 'application', 'manBun', 'hip', 'facialHair', 'granola']);
