Put social media links on the right of the nav bar and add dropdown menu

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="css/styles.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
   <title>Unabashed clone of another website</title>
 
   <script src="libs/jquery-1.11.2.js"></script>
@@ -12,11 +10,14 @@
   <script src="bustle.js"></script>
   <script src="router.js"></script>
   <script src="controllers/headlines.js"></script>
+  <script src="controllers/application.js"></script>
 
   <script>
     EmberHandlebarsLoader.loadTemplates(['headlines', 'application', 'manBun', 'hip', 'facialHair', 'granola']);
   </script>
 
+  <link href="css/styles.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
